--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <title>Hidden Search button</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <script src="script.js"></script>
+  <div class="search">
+    <input type="text" class="input " placeholder="       Search...">
+    <button class="btn"><i class="fas fa-search"></i></button>
+  </div>
 </body>
 </ht 
